# readmit-stgnn

./: README.md  args.py  flatten_data.py  pyproject.toml  requirements.txt  run_train.sh  train.py  xgboost.ipynb
data/: dataset.py  readmission_utils.py
ehr/: get_mimic_cohort.py  preprocess_ehr.py
model/: graphsage.py  simple_lstm.py  simple_rnn.py
stgnn/: constants.py  get_mimic_cohort.py  gnn_explainer.py  preprocess_ehr.py  train.py
stgnn/data/: dataset.py  mimic_our_test_cohort.csv
stgnn/model/: simple_rnn.py
